# automated-test-py

./: README.md  pyproject.toml  setup.cfg  tox.ini
src/automated_testing/: conectar.py  main.py  receber_dados.py
tests/: test_main.py
