[metadata]
name = automated_testing
description = Automated Testing
author = Samuelson Pajeu
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    automated_testing

python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing = 
    pytest>=7.1.2
    pytest-cov>=3.0.0
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1

[options.package_data]
automated_testing = py.typed

[flake8]
max-line-length = 160